<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center"
    android:padding="16dp"
    tools:context="com.example.v_ict.primeraapp.MainActivity">

    <RelativeLayout
        android:id="@+id/l1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/l2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/l1">

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/user"
            android:paddingLeft="15dp"
            android:singleLine="true"
            android:textColor="@color/greyLogin"
            android:textColorHighlight="@color/greyLogin"
            android:textColorHint="@color/greyLogin" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/user"
            android:drawableLeft="@drawable/locked"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:paddingLeft="15dp"
            android:singleLine="true"
            android:textColor="@color/greyLogin"
            android:textColorHint="@color/greyLogin" />


        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/gradient2"
            android:text="@string/login"
            android:textColor="@color/greyLogin"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/registrarse"
            android:textColor="@color/greyLogin"
            android:textSize="15dp"
            android:textStyle="bold"

            />
    </RelativeLayout>
</RelativeLayout>
